Prevent horizontal overflow caused by "languageless" code blocks
 (see https://www.htmhell.dev/adventcalendar/2023/12/)

--- a/hell/assets/style.css
+++ b/hell/assets/style.css
@@ -167,6 +167,10 @@ code {
   font-size: 1.5rem;
 }
 
+code {
+  white-space: pre-wrap;
+}
+
 h2 code,
 h3 code {
   font-size: 0.8em;
